--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,62 @@
     font-weight: 600;
     line-height: normal;
 }
+
+/* failure */
+
+.failure {
+    margin-top: 100px;
+    margin-bottom: 100px;
+    height: 100vh;
+}
+.f-img {
+    background-image: url("../images/back1.png");
+    background-repeat: no-repeat;
+    background-position: bottom left;
+    background-size: 600px;
+}
+
+.f-img > .f-img-cont > img {
+    height: 650px;
+    width: 450px;
+    margin-left: 40px;
+    padding-right: 72px;
+}
+
+.failure-container {
+    display: flex;
+    justify-content: space-around;
+    gap: 100px;
+    align-items: center;
+}
+
+.description > h4 {
+    color: #151414;
+    font-family: Work Sans;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    width: 288px;
+}
+
+.description p {
+    color: #444343;
+    font-family: Work Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    margin: 15px 0px;
+}
+
+.description ul {
+    color: var(--dark-02, #444343);
+    font-family: Work Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    width: 335px;
+    margin: auto;
+}
