--- a/css/style.css
+++ b/css/style.css
@@ -124,3 +124,48 @@
     width: 335px;
     margin: auto;
 }
+
+/* plan sec */
+
+.my-plan-cont {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+}
+
+.my-plan > h4 {
+    color: #151414;
+    font-family: Work Sans;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-align: center;
+    margin-bottom: 70px;
+}
+
+.plan-itm h5 {
+    color: #151414;
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.plan-itm p {
+    color: #737272;
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.my-plan {
+    margin-bottom: 100px;
+}
+
