--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,6 @@
 
 .positive {
     height: 80vh;
-    width: 1600px;
     border: 1px solid gray;
     position: relative;
 }
@@ -212,3 +211,63 @@
     line-height: normal;
 }
 
+/* Footer */
+
+.footer-container {
+    height: 577px;
+    background: #151414;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.footer-iteam > h4 {
+    color: #F8F8F8;
+    font-family: Work Sans;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.footer-iteam p {
+    color: #FFF;
+    font-family: Work Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.footer-iteam {
+    margin: 0px 100px;
+}
+
+.footer-iteam img {
+    margin-right: 15px;
+}
+
+.peragraph {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.pera {
+    margin-bottom: 20px;
+}
+
+input {
+    display: block;
+    margin-bottom: 5px;
+    width: 325px;
+    height: 64px;
+    border-radius: 8px;
+    border: 1px solid #FFF;
+    background: #151414;
+    font-size: 25px;
+}
+
+input ::placeholder {
+    margin-left: 15px;
+    padding: 0px 15px;
+}
