--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,67 @@
     margin: 0px;
     padding: 0px;
 }
+
+/* External CSS for Shrabony Navbar */
+
+body {
+    background-color: #ffffff;
+  }
+  
+  .navbar {
+    background-color: #98FB98;
+    height: 100px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  
+  span {
+    color: red;
+  }
+
+  .logo {
+    font-size: 40px;
+  }
+
+  .navbar a {
+    float: left;
+    text-align: center;
+    padding: 10px;
+    color: #000;
+    text-decoration: none;
+    font-size: 16px;
+  }
+  
+  .navbar a:hover {
+    background-color: #000;
+    color: #ffffff;
+  }
+  
+  .logo {
+    float: left;
+    width: 100px;
+    height: 50px;
+    margin-top: 5px;
+  }
+  
+  .navbar .active {
+    background-color: #000;
+    color: #ffffff;
+  }
+
 /* banner section */
 
 .banner-container {
     background: url("../images/banner/banner4.jpg"), lightgray 50% / cover no-repeat;
     /* background-blend-mode: overly; */
     height: 800px;
+}
+
+.col-1 {
+    height: 800px;
+    background-color: rgba(58, 22, 22, 0.683);
 }
 
 .banner-iteam {
@@ -35,7 +90,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
-    background: rgba(31, 16, 16, 0.664) 50% / cover no-repeat;
+    /* background: rgba(31, 16, 16, 0.735) 50% / cover no-repeat; */
     line-height: 30px;
     }
 
